--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mohan Teja</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="toggle.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono&display=swap" rel="stylesheet">
@@ -80,8 +81,11 @@
             <div>
                 <h1>About Me 🙋🏻</h1>
                 <p>I’m a 3rd year student at Vellore Institute of Technology, India with 8.9 CGPA.<br>My subject of study is Electronics and Communication Engineering.</p>
-                <p>I Like creating something usefull out of the problems I have,Which got me into coding and creating things</p>
-                <p>Which in Turn I started to create many usefull things check my <a href="https://github.com/beaterblank">projects</a> for more</p>
+                <p>I Like creating out of the problems I have,Which got me into coding and creating things</p>
+                <p>Which in turn I started to create these<a href="https://github.com/beaterblank">projects</a></p>
+                <h1>Contact🙎🏻</h1>
+                <p><b>Email:</b><br><a href="mailto:mohanteja.g2019@vitstudent.ac.in">mohanteja.g2019@vitstudent.ac.in</a>(school);<br><a href="mailto:gmtejar@gmail.com">gmtejar@gmail.com</a>(personal)</p>
+                <p><b>PhNo:</b>6303710025</p>
             </div>
         </section>
     </main>
