--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
                 <p>I Like creating out of the problems I have,Which got me into coding and creating things</p>
                 <p>Which in turn I started to create these<a href="https://github.com/beaterblank">projects</a></p>
                 <h1>Contact🙎🏻</h1>
-                <p><b>Email:</b><br><a href="mailto:mohanteja.g2019@vitstudent.ac.in">mohanteja.g2019@vitstudent.ac.in</a>(school);<br><a href="mailto:gmtejar@gmail.com">gmtejar@gmail.com</a>(personal)</p>
+                <p><b>Email:</b><br><a href="mailto:mohanteja.g2019@vitstudent.ac.in">school</a>;<br><a href="mailto:gmtejar@gmail.com">personal</a></p>
                 <p><b>PhNo:</b>6303710025</p>
             </div>
         </section>
