--- a/index.html
+++ b/index.html
@@ -74,19 +74,53 @@
         <section id="intro">
             <div>
                 <h1>Hi,this is Mohan 👋</h1>
-                <p>I create and design stuff with code</p>
+                <p>I make solutions from ML and AI</p>
             </div>
         </section>
         <section id="about">
             <div>
                 <h1>About Me 🙋🏻</h1>
-                <p>I’m a 3rd year student at Vellore Institute of Technology, India with 8.9 CGPA.<br>My subject of study is Electronics and Communication Engineering.</p>
-                <p>I Like creating out of the problems I have,Which got me into coding and creating things</p>
-                <p>Which in turn I started to create these<a href="https://github.com/beaterblank">projects</a></p>
-                <h1>Contact🙎🏻</h1>
+                <p>I’m a 4th year student at Vellore Institute of Technology, India with 9.04 CGPA.<br>I'm majoring in Electronics and Communication Engineering.</p>
+                <p>I Like creating soultions from the problems I have,Which got me into ML and AI to create solutions</p>
+                <p>Which in turn I started to create these <a href="https://github.com/beaterblank">projects</a></p>
+                <h1>Contact Me🙎🏻</h1>
                 <p><b>Email:</b><br><a href="mailto:mohanteja.g2019@vitstudent.ac.in">school</a>;<br><a href="mailto:gmtejar@gmail.com">personal</a></p>
                 <p><b>PhNo:</b>6303710025</p>
             </div>
+        </section>
+        <section id="Certifications">
+            <div>
+                <h1>Certifications 📜</h1>
+                <h2>AWS Certified Cloud Practitioner ☁️</h2>
+                <a href="https://beaterblank.github.io/RESUME/AWS%20Certified%20Cloud%20Practitioner%20certificate.pdf">Certificate</a>
+                <p>This credential helps organizations identify and develop <br>talent with critical knowledge related to implementing <br>cloud initiatives. Earning AWS Certified Cloud Practitioner <br>validates cloud fluency and foundational AWS knowledge.</p>
+                <h2>Programming Languages</h2>
+                <ul>
+                    <li><a href="https://beaterblank.github.io/RESUME/G-MOHAN-TEJA-Participant-Certificate%20(2).pdf">Java</a></li>
+                    <li><a href="https://beaterblank.github.io/RESUME/G-MOHAN-TEJA-Participant-Certificate%20(1).pdf">C++</a></li>
+                </ul>
+            </div>
+        </section>
+
+        <section id="Nanodegree">
+            <div>
+                <h1>Nanodegrees 🎓</h1>
+                <h2>AI Programming with Python Nanodegree 🐍</h2>
+                <p>Learnt Python, NumPy, Pandas, Matplotlib, PyTorch, and Linear <br>Algebra—the foundations for building my own neural networks</p>
+                <h2>AWS Machine Learning Foundations 🤖</h2>
+                <p>Leart how to Work with Machine Learning Projects <br>in AWS with Basic Machine Learning knowledge</p>
+                <h1>Work Experience 💼</h1>
+                <h2>Research Intern,CCPS VIT Chennai 📄</h2>
+                <ul>
+                <li>Under the school Center for Cyber Physical Systems played a major <br>role in deep learning paper based onAutoencoders</li>
+                <li>Lead a team of 4 for the Internship under the guidance of a professor</li>
+                </ul>
+            </div>
+        </section>
+        <section id="contact me" >
+            <div><h1>Contact Me🙎🏻</h1>
+                <p><b>Email:</b><br><a href="mailto:mohanteja.g2019@vitstudent.ac.in">school</a>;<br><a href="mailto:gmtejar@gmail.com">personal</a></p>
+                <p><b>PhNo:</b>6303710025</p></div>
         </section>
     </main>
     <div class="toggleWrapper">
