--- a/index.html
+++ b/index.html
@@ -118,7 +118,11 @@
             </div>
         </section>
         <section id="contact me" >
-            <div><h1>Contact Me🙎🏻</h1>
+            <div>
+                <h1>Like what u saw? ✨</h1>
+                <p><b>Contact Me 🙎🏻</b></p>
+                <p><b>Im from 📍</b>: Chitoor,Andhra Pradesh,India</p>
+                <p>You can Find My Resume <a href="https://beaterblank.github.io/RESUME/19BEC1133_MOHAN%20TEJA.pdf">here</a></p>
                 <p><b>Email:</b><br><a href="mailto:mohanteja.g2019@vitstudent.ac.in">school</a>;<br><a href="mailto:gmtejar@gmail.com">personal</a></p>
                 <p><b>PhNo:</b>6303710025</p></div>
         </section>
