--- a/index.html
+++ b/index.html
@@ -63,10 +63,22 @@
             </li>
             <li class="nav-item">
                 <a href="#about" class="nav-link">
-                    <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" x="25px" y="25px" viewBox="0 0 1000 1000" enable-background="new 0 0 1000 1000" xml:space="preserve">
+                <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" x="25px" y="25px" viewBox="0 0 1000 1000" enable-background="new 0 0 1000 1000" xml:space="preserve">
                         <g fill="#ffffff"><path d="M500,990c270.2,0,490-219.8,490-490c0-270.2-219.8-490-490-490C229.8,10,10,229.8,10,500C10,770.2,229.8,990,500,990z M500,955c-119.2,0-234.1-60.9-323.6-139.8L164,804.4l10.6-12.5c31.4-37.3,87-68.4,156.5-87.5c24.8-9.9,36.9-16.5,45.9-25.4c9.6-9.6,14.8-18.5,16.7-28.5c1.2-6.8,0.9-42.6-0.1-74.3c-17.2-19.5-32.2-48.5-46.5-90.5c-14.8-7.7-28-26.7-32-47.6c-4.2-22.4-1.9-41.2,6.1-52.4C302.7,278,314.5,198.1,356.3,148c32.7-39.2,82.5-58.9,148.3-58.9l6-0.1c54.7,0,67.3,11.4,79.1,27.6c2.3,3.1,4.2,5.6,7,7.9c30.3,0,55.4,12.1,72.7,35.1c32.9,43.5,36.9,126.8,11.1,224.4c9.1,11.1,11.7,31.3,6.3,55.2c-5,22.3-20.6,42.2-36.5,48.3c-11.7,38.4-23.6,67.5-42.3,89.4V647c2,15.5,7.9,21.2,18.7,31.6l7.1,7.1c6.6,5.4,12.6,8.2,39.1,19.8c66.5,18.4,121.6,49.3,152.7,86.3l10.5,12.5l-12.3,10.9C734,894.1,619.1,955,500,955z"/></g>
-                        </svg>
+                </svg>
                 </a>
+            </li>
+            <li class="nav-item">
+                <a href="#cert" class="nav-link">
+                    <svg xmlns="http://www.w3.org/2000/svg" xmlns:svgjs="http://svgjs.com/svgjs" xmlns:xlink="http://www.w3.org/1999/xlink" width="25" height="25"><svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" viewBox="0 0 25 25"><path fill="#fff" d="M11.25 9.541l-2.25-2.182.929-.929 1.321 1.253 2.821-2.892.929.93-3.75 3.82zm7.676-3.819c-.482 1.41-.484 1.139 0 2.555.05.147.074.297.074.445 0 .449-.222.883-.615 1.156-1.256.87-1.09.651-1.562 2.067-.198.591-.77.99-1.415.99h-.003c-1.549-.005-1.28-.088-2.528.789-.262.184-.569.276-.877.276s-.615-.092-.876-.275c-1.249-.878-.98-.794-2.528-.789h-.004c-.645 0-1.216-.399-1.413-.99-.473-1.417-.311-1.198-1.562-2.067-.395-.274-.617-.708-.617-1.157 0-.148.024-.298.074-.444.483-1.411.484-1.139 0-2.555-.05-.147-.074-.297-.074-.445 0-.45.222-.883.616-1.157 1.251-.868 1.089-.648 1.562-2.067.197-.591.769-.99 1.413-.99h.004c1.545.005 1.271.095 2.528-.79.262-.183.569-.274.877-.274s.615.091.876.274c1.248.878.98.795 2.528.79h.003c.646 0 1.217.399 1.415.99.473 1.416.307 1.197 1.562 2.067.394.273.616.707.616 1.156 0 .148-.024.299-.074.445zm-2.176 1.278c0-2.623-2.127-4.75-4.75-4.75s-4.75 2.127-4.75 4.75 2.127 4.75 4.75 4.75 4.75-2.128 4.75-4.75zm-7.385 7.931c-.766 0-1.371-.074-1.873-.213-.308 3.068-1.359 5.37-3.492 7.592.854.107 1.95-.094 2.833-.56.317.636.65 1.43.767 2.25 2.009-2.299 3.266-5.054 3.734-8.071-.943-.181-1.234-.496-1.969-.998zm5.27 0c-.737.507-1.043.82-1.968.998.47 3.017 1.726 5.772 3.733 8.071.116-.82.449-1.614.767-2.25.883.465 1.979.667 2.833.56-2.13-2.219-3.168-4.531-3.479-7.595-.503.141-1.112.216-1.886.216z" class="color000 svgShape"/></svg></svg>
+                </svg>
+            </a>
+            </li>
+            <li class="nav-item">
+                <a href="#nano" class="nav-link">
+                    <svg xmlns="http://www.w3.org/2000/svg" xmlns:svgjs="http://svgjs.com/svgjs" xmlns:xlink="http://www.w3.org/1999/xlink" width="25" height="25"><svg xmlns="http://www.w3.org/2000/svg" width="25" height="25" enable-background="new 0 0 100 100" viewBox="0 0 100 100"><polygon fill="#fff" points="83.781 75.269 86.367 72.683 88.954 75.269 88.954 50.216 83.781 52.514" class="color000 svgShape"/><path fill="#fff" d="m93.912 39.711l-41.342-20.705c-1.413-0.708-3.726-0.708-5.139 0l-41.343 20.705c-1.413 0.708-1.455 1.944-0.094 2.746l38.516 22.696 0.026 0.015-25.574-11.445v7.495c0 1.581 1.114 3.531 2.476 4.333l26.086 15.371c1.362 0.803 3.59 0.803 4.952 0l26.086-15.371c1.362-0.803 2.476-2.752 2.476-4.333v-7.486l-25.087 11.149 38.055-22.424c1.361-0.803 1.319-2.039-0.094-2.746z" class="color000 svgShape"/></svg></svg>
+                </svg>
+            </a>
             </li>
         </ul>
     </nav>
@@ -88,7 +100,7 @@
                 <p><b>PhNo:</b>6303710025</p>
             </div>
         </section>
-        <section id="Certifications">
+        <section id="cert">
             <div>
                 <h1>Certifications 📜</h1>
                 <h2>AWS Certified Cloud Practitioner ☁️</h2>
@@ -101,8 +113,7 @@
                 </ul>
             </div>
         </section>
-
-        <section id="Nanodegree">
+        <section id="nano">
             <div>
                 <h1>Nanodegrees 🎓</h1>
                 <h2>AI Programming with Python Nanodegree 🐍</h2>
