--- a/index.html
+++ b/index.html
@@ -106,11 +106,15 @@
                 <h2>AWS Certified Cloud Practitioner ☁️</h2>
                 <a href="https://beaterblank.github.io/RESUME/AWS%20Certified%20Cloud%20Practitioner%20certificate.pdf">Certificate</a>
                 <p>This credential helps organizations identify and develop <br>talent with critical knowledge related to implementing <br>cloud initiatives. Earning AWS Certified Cloud Practitioner <br>validates cloud fluency and foundational AWS knowledge.</p>
-                <h2>Programming Languages</h2>
+                <h2>Technical Skills</h2>
                 <ul>
+                    <li>Python</li>
+                    <li> Ml ,Ai ,Deep learning, Reinfocement learning</li>
+                    <li>Full Stack Devlopment</li>
                     <li><a href="https://beaterblank.github.io/RESUME/G-MOHAN-TEJA-Participant-Certificate%20(2).pdf">Java</a></li>
                     <li><a href="https://beaterblank.github.io/RESUME/G-MOHAN-TEJA-Participant-Certificate%20(1).pdf">C++</a></li>
                 </ul>
+                
             </div>
         </section>
         <section id="nano">
